# dhs

./: .gitignore  CHANGELOG.rst  LICENSE  README.md  codebook.csv  codebook.rst  environment.yaml  pyproject.toml  setup_dhs.txt  tox.ini  virtual-packages.yaml
accessories/: stata_colors.json
docs/: conf.py  dhs.helpers.rst  dhs.utils.rst  main_modules.rst
docs/_build/doctrees/: dhs.doctree  dhs.helpers.base.doctree  dhs.helpers.doctree  dhs.utils.doctree  environment.pickle  index.doctree  list_objects.doctree  logic_subpackages.doctree  main_modules.doctree  modules.doctree
docs/_build/html/: .buildinfo  dhs.helpers.base.html  dhs.helpers.html  dhs.html  dhs.utils.html  genindex.html  index.html  list_objects.html  logic_subpackages.html  main_modules.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/dhs/: plot_marg_dens.html  run_dhs_example.html  run_first_simul.html  run_hyperparam_sens.html  run_real_data.html  run_second_simul.html
docs/_build/html/_modules/dhs/helpers/: create_dhs.html  create_mdl_alc_data.html  create_simuls.html
docs/_build/html/_sources/: dhs.helpers.base.rst.txt  dhs.rst.txt  index.rst.txt  list_objects.rst.txt  logic_subpackages.rst.txt  modules.rst.txt
src/dhs/: __init__.py  __main__.py  plot_marg_dens.py  run_dhs_example.py  run_first_simul.py  run_hyperparam_sens.py  run_real_data.py  run_second_simul.py
src/dhs/conf/: config.yaml
src/dhs/conf/densities/: small_sample.yaml
src/dhs/conf/hydra/job_logging/: custom.yaml
src/dhs/helpers/: __init__.py  create_dhs.py  create_mdl_alc_data.py  create_simuls.py
src/dhs/helpers/base/: __init__.py  _append_metrics.py  plot_params.py  prior_mdls.py
src/dhs/utils/: __init__.py  _append_to_dict.py  _create_df_metrics.py  _pm_obj.py  config.py  create_func_dict.py  create_list_comp.py  logger.py  marg_dens.py  mod_tex_tab.py  num_format.py  perf_metrics.py  plot_metrics.py  plot_posteriors.py  run_sampler.py  write_text_file.py
tests/: end_to_end_test.py  integration_test.py  unit_test.py
(+14 files in other folders)
